--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       } else {
       }
     }
-
+    // assadsadsa
     function checkPrice(select) {
       var anSang = document.getElementById("op1");
       var mucgia = select.value;
@@ -75,6 +75,7 @@
         anSang.checked = true;
       } else {
         anSang.checked = false;
+        alert("1212");
       }
     }
   </script>
