--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       } else {
         anSang.checked = false;
         alert("1212");
+        // commit by khacduy
       }
     }
   </script>
