--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         anSang.checked = false;
         alert("1212");
         // commit by khacduy
+        // duma 
       }
     }
   </script>
